done with required functionalities